tests/paczka1/fuzzy1/72521682.err
Error in line 4: HEi8L3RWTL S361 32,9
Error in line 7: NGIN S56 54,81
Error in line 13: S361 S361 49,6
Error in line 22: qzZ S361 22,0
Error in line 23: qzZ S540 19,1
Error in line 26: K8knfht S540 97,8
Error in line 6: HEi8L3RWTL S540 91,9
Error in line 37: qzZ S4«4 9,8
